--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1> Hablu Vai</h1>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto porro quam ad rem dolorem officia reiciendis magnam quis minima sapiente.</p>
 </body>
 </html>
