--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> Hablu Vai</h1>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto porro quam ad rem dolorem officia reiciendis magnam quis minima sapiente.</p>
-    <p> Hablu Vai</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, dicta minus! Voluptatum obcaecati, nihil aspernatur amet exercitationem odit aliquam ipsa?</p>
 </body>
 </html>
