--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> Hablu vai</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae pariatur illo, ratione ea saepe aspernatur facere dicta itaque nostrum ducimus, eaque quia debitis voluptates, officia dolorem molestiae? Velit, eius beatae.</p>
-    <p> Hablu vai</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In rerum animi doloremque quasi dignissimos fuga. Rem, fugiat quam, quos vel pariatur quaerat sequi illo iusto eos beatae ea tempore omnis!</p>
 </body>
 </html>
